--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <div class="loan-block">
                                 <div class="upper">
                                     <label>loan Amount</label>
-                                    <input type="number" class="loan" value="">
+                                    <input type="text" class="loan" value="">
                                 </div>
                                 <input class="loan" type="range" min="0" max="1000" step="1" value="600"
                                        data-orientation="horizontal">
@@ -100,7 +100,7 @@
                             <div class="term-block">
                                 <div class="upper">
                                     <label>Term</label>
-                                    <input class="term" type="number" value="">
+                                    <input class="term" type="text" value="">
                                 </div>
                                 <input class="term" type="range" min="0" max="1000" step="1" value="500"
                                        data-orientation="horizontal">
@@ -108,7 +108,7 @@
                             <div class="amount-block">
                                 <div class="upper">
                                     <label>Installment Amount</label>
-                                    <input class="amount" type="number" value="">
+                                    <input class="amount" type="text" value="">
                                 </div>
                                 <input class="amount" type="range" min="0" max="1000" step="1" value="800"
                                        data-orientation="horizontal">
@@ -140,7 +140,7 @@
                 </div>
                 <div class="container" id="tab2C">
                     <div class="container-content">
-                        2Some content
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, accusamus dolor laborum perferendis placeat repellat tempora tenetur totam velit voluptas!
                     </div>
                 </div>
                 <div class="container" id="tab3C">
@@ -159,8 +159,8 @@
                     <div class="slide"></div>
                 </div>
                 <div class="slide-title">
-                    <p>Maximum Card</p>
-                    <p>Maximum Card</p>
+                    <p>Gold Card</p>
+                    <p>Platinum Card</p>
                     <p>Maximum Card</p>
                 </div>
                 <div class="current-debt">
@@ -205,10 +205,10 @@
                         <p>Alper<br>Tornaci</p>
                     </div>
                     <div class="tl-block">
-                        <p>00.00 TL</p>
+                        <input type="text" placeholder="00.00 TL">
                     </div>
                     <div class="send-block">
-                        <p>Send</p>
+                        <button>Send</button>
                     </div>
                 </div>
                 <div class="s-block">
@@ -219,10 +219,10 @@
                         <p>Tugrul<br>Kucukmustafa</p>
                     </div>
                     <div class="tl-block">
-                        <p>00.00 TL</p>
+                        <input type="text" placeholder="00.00 TL">
                     </div>
                     <div class="send-block">
-                        <p>Send</p>
+                        <button>Send</button>
                     </div>
                 </div>
                 <div class="s-block">
@@ -233,10 +233,10 @@
                         <p>Salim<br>Tornaci</p>
                     </div>
                     <div class="tl-block">
-                        <p>00.00 TL</p>
+                        <input type="text" placeholder="00.00 TL">
                     </div>
                     <div class="send-block">
-                        <p>Send</p>
+                        <button>Send</button>
                     </div>
                 </div>
             </div>
@@ -312,7 +312,7 @@
         </div>
     </div>
     <div class="footer">
-        <p>financial index...</p>
+        <p>Market Indexes...</p>
     </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
